--- a/index.css
+++ b/index.css
@@ -2,6 +2,11 @@
 
 @import "tw-animate-css";
 
+@theme {
+  --font-serif: "Playfair Display", serif;
+  --font-sans: "Lato", sans-serif;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @utility container {
